# rpsl-reader

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: python.yaml
crates/polars-rpsl/: Cargo.toml
crates/polars-rpsl/src/: lib.rs  schema.rs  schemaless.rs
crates/rpsl-parser/: Cargo.toml
crates/rpsl-parser/src/: lib.rs
python/polars_rpsl/: __init__.py
tests/: test_rpsl_reader.py
