[project]
name = "polars-rpsl"
dynamic = ["version"]
description = "Fast RPSL parser with Polars DataFrame output"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["polars>=1.0", "pyarrow>=15.0"]
authors = [
  { name = "Ragnar Dahlén" }
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ragnard/rpsl-reader"
Repository = "https://github.com/ragnard/rpsl-reader.git"

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "pytest>=8.0"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/polars-rpsl/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "polars_rpsl._rpsl_reader"
